--- a/projects/autoloantools.html
+++ b/projects/autoloantools.html
@@ -50,22 +50,14 @@
                                 <h2 class="my-4 project-title">Auto Loan Tracker</h2>
                                 <h2 class="modal-subhead">Problem</h2>
                                 <div class="col-12">
-                                    In 2017, a large number of Capital One auto loan customers reaching the end of their
-                                    loan term
-                                    discovered
-                                    a
-                                    remaining balance on their account ($200 on average). This was typically due to
-                                    deviations in their
-                                    repayment
-                                    history resulting in additional accrued interest over the life of their loan which
-                                    led to
-                                    increased call volume and an overall frustrating experience for customers trying to
-                                    understand what caused the balance to remain after they made, what they thought, was
-                                    their
-                                    last payment. My team was tasked with developing a set of features focused on
-                                    educating and
-                                    helping customers prevent events that would lead to this balance at the end of their
-                                    loan.
+                                    In 2017, over half of Capital One auto loan customers reaching the end of their loan
+                                    term discovered a remaining balance on their account ($200 on average). This was
+                                    typically due to deviations in their repayment history resulting in additional
+                                    accrued interest over the life of their loan. As you can imagine, this led to
+                                    frustrated customers calling in trying to understand what caused a balance to remain
+                                    after they made, what they thought, was their final payment. My team and I were
+                                    tasked with developing a set of features focused on educating and helping customers
+                                    prevent events that would lead to a balance at the end of their loan.
                                 </div>
                             </div>
                             <div class="row mb-5">
@@ -73,11 +65,9 @@
                                     <h2 class="modal-subhead">Skills</h2>
                                     <div class="col-12">
                                         <ul>
-                                            <li>Research</li>
                                             <li>Wireframing</li>
                                             <li>UX/UI Design</li>
                                             <li>Prototyping</li>
-                                            <li>Content Strategy</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -85,32 +75,39 @@
                                     <h2 class="modal-subhead">My Role</h2>
                                     <div class="col-12">
                                         My role included working closely with the research team to conduct a series of
-                                        empathy
-                                        interviews,
-                                        building a foundational understanding of customer perceptions of simple interest
-                                        loans and
-                                        identifying gaps that could be addressed within the digital experience. I was
-                                        then
-                                        tasked
-                                        with concepting, designing, and testing solutions before supporting our
-                                        engineeringing
-                                        team’s build and shipment of the experience.
+                                        empathy interviews, building a foundational understanding of customer
+                                        perceptions regarding simple interest loans and identifying gaps that could be
+                                        addressed within the digital experience.
+                                    </div>
+                                    <div class="col-12">
+                                        I was then tasked with concepting, designing, and testing solutions then
+                                        supporting our engineering team’s build and shipment of the experience.
                                     </div>
                                 </div>
                             </div>
                             <div class="row mb-5">
                                 <h2 class="modal-subhead">Solution</h2>
                                 <div class="col-12">
-                                    We designed and developed a loan tracking feature to give customers the information
-                                    to
-                                    answer the question of “How am I doing?” when it came to their repayment plan. With
-                                    this
-                                    tool, users could find out things like whether or not they were ahead or behind on
-                                    their
-                                    repayment plan. If they were behind, how much would be due at the end of their loan.
-                                    Inversely, if they were paying extra or early, how much they would save and if
-                                    possible, how
-                                    much earlier they would pay off the loan.
+                                    We designed and developed a loan tracking feature that gives customers information
+                                    to answer the question of “How am I doing?” when it comes to their repayment plan.
+                                    With this tool, customers can easily find out if they are ahead, behind, or on
+                                    schedule with their payment plan. If they are behind, the tool shows them how much
+                                    is projected to be due at the end of their loan. Inversely, if they are paying extra
+                                    or early, how much they will save and possibly, how much earlier they would pay off
+                                    the loan.
+                                </div>
+                            </div>
+                            <div class="row mb-5">
+                                <h2 class="modal-subhead">Impact</h2>
+                                <div class="col-12">
+                                    <ul>
+                                        <li class="mb-2">
+                                            5MM in annual savings for customers using the tool
+                                        </li>
+                                        <li class="mb-2">
+                                            12% yearly reduction in calls related to remaining account balances
+                                        </li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
@@ -158,13 +155,13 @@
                                 <h2 class="modal-subhead">Problem</h2>
                                 <div class="col-12">
                                     Life happens. Customers fall behind on payments and, in many cases, they need help
-                                    keeping
-                                    their vehicle and getting back on track with their loan. How might we offer a
-                                    digital tool
-                                    that allows customers who get behind financially to create a repayment plan that
-                                    works with
-                                    their situation while avoiding embarrassing phone calls with customer service
-                                    representatives or worse, repossession, collections, and negative credit reporting?
+                                    keeping their vehicle and getting back on track with their loan.
+                                </div>
+                                <div class="col-12">
+                                    How might we offer a digital tool that allows customers who get behind financially
+                                    to create a repayment plan that works with their situation while avoiding
+                                    embarrassing phone calls with customer service representatives or worse,
+                                    repossession, collections, and negative credit reporting?
                                 </div>
                             </div>
                             <div class="row">
@@ -172,11 +169,9 @@
                                     <h2 class="modal-subhead">Skills</h2>
                                     <div class="col-12">
                                         <ul>
-                                            <li>Research</li>
                                             <li>Wireframing</li>
                                             <li>UX/UI Design</li>
                                             <li>Prototyping</li>
-                                            <li>Content Strategy</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -184,13 +179,10 @@
                                     <h2 class="modal-subhead">My Role</h2>
                                     <div class="col-12">
                                         My role was to lead the design work, working closely with our product, analyst,
-                                        content, and
-                                        research teams to understand what parameters worked best for customers and kept
-                                        them
-                                        in
-                                        their cars while mitigating overall risk to the business and navigating the
-                                        regulatory
-                                        environment around consumer auto lending.
+                                        content, and research teams to understand what was best for customers, keeping
+                                        them in their cars with payment plans that worked within their budgets. This had
+                                        to be done while mitigating overall risk to the business and navigating the
+                                        regulatory environment around consumer auto lending.
                                     </div>
                                 </div>
                             </div>
@@ -199,37 +191,26 @@
                                 <div class="col-12">
                                     <ul>
                                         <li class="mb-3">
-                                            After conducting a series of empathy interviews to understand the choices
-                                            customers
-                                            made during financial hardship and why they made them, we design a digital
-                                            self-service tool based, in part, on an existing repayment plan administered
-                                            over
-                                            the phone through call-center agents but with added flexibility to account
-                                            for
-                                            customer needs discovered during our interviews.
+                                            We first conducted a series of empathy interviews to understand the choices
+                                            customers made during financial hardship and why they made them.
                                         </li>
                                         <li class="mb-3">
-                                            This tool allowed customers to create a personalized payment plan and spread
-                                            out
-                                            their past due amount over a few months, getting current through manageable
-                                            increments. Customers had additional configurable options including changing
-                                            initial
-                                            payment dates, adjusting payment amounts, and choosing due dates for
-                                            subsequent
-                                            payments. Starting from a place of empathy in how the options were
-                                            communicated
-                                            resonated in early concept testing and was validated in subsequent call
-                                            listening
-                                            sessions after the tool launched.
+                                            We then designed a digital self-service tool based, in part, on an existing
+                                            repayment plan administered over the phone through call-center agents but
+                                            with added flexibility to account for customer needs discovered during our
+                                            interviews.
                                         </li>
                                         <li>
-                                            After initially launching as a pilot for web, it is now available to all
-                                            customers.
-                                            We saw a significant increase in the use of the tool once it was made
-                                            available, and
-                                            customers who commit to a custom payment plan are much more likely to get
-                                            current on
-                                            their loan.
+                                            This tool allowed customers to create a personalized payment plan and spread
+                                            out their past due amount over a few months, getting current through
+                                            manageable increments. Customers have additional configurable options
+                                            including changing payment dates and adjusting payment amounts.
+                                        </li>
+                                        <li>
+                                            Regarding the content throughout the experience, starting from a place of
+                                            empathy in how the options were communicated resonated in early concept
+                                            testing and was validated in subsequent call listening sessions after the
+                                            tool launched.
                                         </li>
                                     </ul>
                                 </div>
@@ -239,32 +220,30 @@
                                 <div class="col-12">
                                     <ul>
                                         <li class="mb-3">
-                                            Over half of the customers using the tool online during the pilot had been
-                                            unreachable by phone despite numerous attempts, so it was clear that adding
-                                            this
-                                            self-service channel satisfied a demand for digital access to a repayment
-                                            tool.
+                                            We saw a 30% increase in the use of our loan repayment plans once this was
+                                            made available online.
                                         </li>
                                         <li class="mb-3">
-                                            This tool also freed up hundreds of hours of per week of phone agents’ time
-                                            to help
-                                            customers who
-                                            prefer to speak on the phone.
+                                            Customers who commit to a custom payment plan are twice as likely to get
+                                            current on their loan.
                                         </li>
                                         <li class="mb-3">
-                                            We initially saw over $4MM a year in loss reduction, and that figure is
-                                            expected to
-                                            double once this feature is
-                                            rolled it out on the Capital One mobile apps.
+                                            Over half of the customers using the tool online have been previously
+                                            unreachable by phone despite numerous attempts.
+                                        </li>
+                                        <li class="mb-3">
+                                            This feature freed up over an estimated 300 hours per week of
+                                            collections agents’ time, allowing them to focus more on customers who
+                                            prefer to speak over the phone.
+                                        </li>
+                                        <li class="mb-3">
+                                            The launch of this feature resulted in over $8MM a year in loss reduction
+                                            for the business.
                                         </li>
                                         <li>
-                                            We demonstrated that doing what’s right for our customers in difficult
-                                            situations
-                                            really does pay off, and on average 800 more customers keep their cars every
-                                            year
-                                            using this tool while remaining Capital One customers and preventing the
-                                            negative
-                                            effects of collections and repossessions.
+                                            On average 800 more customers keep their cars every year using this tool,
+                                            remaining Capital One customers and preventing the negative effects of
+                                            collections and repossessions.
                                         </li>
                                     </ul>
                                 </div>
