--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- 
+    __  __                  __      __
+   / / / /___ _      ______/ /_  __/ /
+  / /_/ / __ \ | /| / / __  / / / / / 
+ / __  / /_/ / |/ |/ / /_/ / /_/ /_/  
+/_/ /_/\____/|__/|__/\__,_/\__, (_)   
+                          /____/       
+                          
+Fancy seeing you here! If you have any feedback on my code or suggestions on how I can improve it, please reach out. I’d love to chat!
+
+-->
 
 <head>
     <meta charset="UTF-8">
@@ -33,7 +44,7 @@
     <meta name="description" content="UX Design Lead, Problem Solver, and High Five Enthusiast.">
 
     <meta property="og:title" content="Hello, my name is Jonny Abowd.">
-    <meta property="og:description" content="UX Design Lead, Problem Solver, and High Five Enthusiast.">
+    <meta property="og:description" content="UX design lead, problem solver, and high five enthusiast.">
     <meta property="og:image" content="https://www.jonnyabowd.com/images/ja-image-preview.png">
     <meta property="og:url" content="https://www.jonnyabowd.com/">
     <meta name="twitter:card" content="summary_large_image">
