--- a/index.html
+++ b/index.html
@@ -217,13 +217,9 @@ Fancy seeing you here! If you have any feedback on my code or suggestions on how
                 <div class="row d-flex justify-content-between">
                     <div class="col-12 col-md-6 mb-3 px-md-5">
                         <p class="contact-info col-12 col-md-11 mb-3 bio">
-                            I’m a firm believer in the power creativity has to solve any problem big or small. I also
-                            believe in
-                            the
-                            lifelong pursuit of things that are
-                            fun
-                            and
-                            fulfilling. Fun-filling, if you will.
+                            I believe that creativity has the power to solve any problem, big or small. I also believe
+                            that we should focus much more energy on things that are fun and fulfilling. Fun-filling, if
+                            you will.
                         </p>
                         <p class="contact-info col-md-11 mb-3 bio">
                             Those who know me know that I value humor, authenticity, and empathy above
