--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Fancy seeing you here! If you have any feedback on my code or suggestions on how
             <h1 class="font-base pill">Hello, my name is <span class="name">Jonny Abowd.</span></h1>
             <img class="profile-img" src="./images/ja-profile-photo.png">
         </div>
-        <h2 class="font-display title fade-in">UX Design Lead, <span class="d-inline-block">Problem Solver,
+        <h2 class="font-display title fade-in">Product Design Lead, <span class="d-inline-block">Problem Solver,
             </span><span class="d-block">and
                 High Five
                 Enthusiast</span>
