--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ Fancy seeing you here! If you have any feedback on my code or suggestions on how
     <link rel="icon" type="image/png" href="./favicon-32x32.png" sizes="32x32">
     <!-- Primary Meta Tags -->
     <title>Hello, my name is Jonny!</title>
-    <meta name="title" content="Hello, my name is Jonny Abowd.">
+    <meta name="title" content="Hello, my name is Jonny Abowd">
     <meta name="description" content="UX Design Lead, Problem Solver, and High Five Enthusiast.">
 
     <meta property="og:title" content="Hello, my name is Jonny Abowd.">
