--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@ Fancy seeing you here! If you have any feedback on my code or suggestions on how
     <link rel="icon" type="image/png" href="./favicon-16x16.png" sizes="16x16">
     <link rel="icon" type="image/png" href="./favicon-32x32.png" sizes="32x32">
     <!-- Primary Meta Tags -->
-    <title>Hello, my name is Jonny!</title>
-    <meta name="title" content="Hello, my name is Jonny Abowd">
+    <title>Howdy, my name is Jonny!</title>
+    <meta name="title" content="Howdy, my name is Jonny Abowd">
     <meta name="description" content="UX Design Lead, Problem Solver, and High Five Enthusiast.">
 
-    <meta property="og:title" content="Hello, my name is Jonny Abowd">
+    <meta property="og:title" content="Howdy, my name is Jonny Abowd">
     <meta property="og:description" content="UX design lead, problem solver, and high five enthusiast.">
     <meta property="og:image" content="https://www.jonnyabowd.com/images/ja-image-preview.png">
     <meta property="og:url" content="https://www.jonnyabowd.com/">
@@ -54,7 +54,7 @@ Fancy seeing you here! If you have any feedback on my code or suggestions on how
 <body class="d-flex justify-content-center">
     <div class="profile">
         <div class="heroes">
-            <h1 class="font-base pill">Hello, my name is <span class="name">Jonny Abowd</span></h1>
+            <h1 class="font-base pill">Howdy, my name is <span class="name">Jonny Abowd</span></h1>
             <img class="profile-img" src="./images/ja-profile-photo.png">
         </div>
         <h2 class="font-display title fade-in">Product Design Lead, <span class="d-inline-block">Problem Solver,
