--- a/index.html
+++ b/index.html
@@ -250,17 +250,17 @@ Fancy seeing you here! If you have any feedback on my code or suggestions on how
                     <form class="col-12 col-md-6" id="contact"
                         action="https://docs.google.com/forms/d/e/1FAIpQLScf3ShGME4sEZULNA0agURy5oIzRbovVPlR0Q6P1UQpXrw2iQ/formResponse"
                         method="post" target="hidden_iframe" onsubmit="submitted=true;">
-                        <div class="mb-3 p-2 d-flex form-container">
+                        <div class="mb-3 p-2 d-flex justify-content-between form-container">
                             <label class="col-3 form-label">Name</label>
-                            <input class="col-9 form-input" type="text" name="entry.1881999062" required>
+                            <input class="col-8 form-input" type="text" name="entry.1881999062" required>
                         </div>
-                        <div class=" mb-3 p-2 d-flex form-container">
+                        <div class="mb-3 p-2 d-flex justify-content-between form-container">
                             <label class="col-3 form-label">Email</label>
-                            <input class="col-9 form-input" type="email" name="entry.518998491" required>
+                            <input class="col-8 form-input" type="email" name="entry.518998491" required>
                         </div>
-                        <div class="mb-3 p-2 d-flex align-content-start form-container">
+                        <div class="mb-3 p-2 d-flex justify-content-between align-content-start form-container">
                             <label class="col-3 form-label">Message</label>
-                            <textarea class="col-9 form-input" name="entry.1638262852" required></textarea>
+                            <textarea class="col-8 form-input" name="entry.1638262852" required></textarea>
                         </div>
                         <button class="btn-custom" type="submit">Send Message</button>
                     </form>
