--- a/index.html
+++ b/index.html
@@ -182,33 +182,36 @@ Fancy seeing you here! If you have any feedback on my code or suggestions on how
             <h2 class="font-display text-center subtitle">Featured Clients</h2>
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-6 col-md-4 p-3 p-md-5 client-logo-container">
+                    <!-- <div class="col-6 col-md-4 p-3 p-md-5 client-logo-container">
                         <img class="px-0 px-xl-5 client-logo" src="/images/client-logos/ja-client-av.svg" alt="Activision">
-                    </div>
+                    </div> -->
                     <div class="col-6 col-md-4 p-3 p-md-5 client-logo-container">
                         <img class="client-logo" src="images/client-logos/ja-client-att.svg" alt="AT&T">
                     </div>
                     <div class="col-6 col-md-4 p-3 p-md-5 client-logo-container">
                         <img class="client-logo" src="/images/client-logos/ja-client-cof.svg" alt="Capital One">
                     </div>
-                    <div class="col-6 col-md-4 p-3 p-md-5 client-logo-container">
+                    <!-- <div class="col-6 col-md-4 p-3 p-md-5 client-logo-container">
                         <img class="client-logo" src="/images/client-logos/ja-client-cheet.svg" alt="Cheetos">
-                    </div>
+                    </div> -->
                     <div class="col-6 col-md-4 p-3 p-md-5 client-logo-container">
                         <img class="px-0 px-xl-5 client-logo" src="images/client-logos/ja-client-dan.svg" alt="Dannon">
                     </div>
-                    <div class="col-6 col-md-4 p-3 p-md-5 client-logo-container">
+                    <!-- <div class="col-6 col-md-4 p-3 p-md-5 client-logo-container">
                         <img class="client-logo" src="/images/client-logos/ja-client-dor.svg" alt="Doritos">
-                    </div>
+                    </div> -->
                     <div class="col-6 col-md-4 p-3 p-md-5 client-logo-container">
                         <img class="client-logo" src="images/client-logos/ja-client-fl.svg" alt="Frito Lay">
+                    </div> 
+                    <div class="col-6 col-md-4 p-3 p-md-5 client-logo-container">
+                        <img class="client-logo" src="images/client-logos/ja-client-goog.svg" alt="Google">
                     </div>
                     <div class="col-6 col-md-4 p-3 p-md-5 client-logo-container">
                         <img class="client-logo" src="/images/client-logos/ja-client-sf.svg" alt="State Farm">
                     </div>
-                    <div class="col-6 col-md-4 p-3 p-md-5 client-logo-container">
+                    <!-- <div class="col-6 col-md-4 p-3 p-md-5 client-logo-container">
                         <img class="px-0 px-xl-3 client-logo" src="/images/client-logos/ja-client-wm.svg" alt="Walmart">
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
