--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Fancy seeing you here! If you have any feedback on my code or suggestions on how
             <h1 class="font-base pill">Howdy, my name is <span class="name">Jonny Abowd</span></h1>
             <img class="profile-img" src="./images/ja-profile-photo.png">
         </div>
-        <h2 class="font-display title fade-in">Product Design Lead, <span class="d-inline-block">Problem Solver,
+        <h2 class="font-display title fade-in">Product Design Lead <span class="d-inline-block">
             </span><span class="d-block">and
                 High Five
                 Enthusiast</span>
@@ -65,14 +65,17 @@ Fancy seeing you here! If you have any feedback on my code or suggestions on how
         <!-- <div class="hr"></div> -->
         <div class="body fade-in">
             <p class="bio">
-                I am a dedicated creative that thrives on finding simple solutions to complex and demanding
-                challenges. Possessing over 14 years of experience working in a variety of mediums with clientele both
-                large and small, I never miss a chance to learn. Cohorts have known me to be a reliable team leader,
-                consistently delivering creative solutions with precision, flexibility, and a relentlessly positive
+                I'm a creative problem solver with                 
+                <span>
+                    <script>document.write( 
+                        new Date().getFullYear() - 2007 + "+"
+                        );
+                    </script>
+                </span>
+                years of experience. I lead teams, love challenges, and have a relentlessly positive
                 attitude.
                 <br><br>
-                Feel free to reach out and <a href="#contact" class="contact-text-link">contact me</a> with any
-                questions or inquiries.
+                Got questions? <a href="#contact" class="contact-text-link">Contact me</a> anytime!
             </p>
             <div class="contact">
                 <div class="links">
@@ -182,24 +185,15 @@ Fancy seeing you here! If you have any feedback on my code or suggestions on how
             <h2 class="font-display text-center subtitle">Featured Clients</h2>
             <div class="container-fluid">
                 <div class="row">
-                    <!-- <div class="col-6 col-md-4 p-3 p-md-5 client-logo-container">
-                        <img class="px-0 px-xl-5 client-logo" src="/images/client-logos/ja-client-av.svg" alt="Activision">
-                    </div> -->
                     <div class="col-6 col-md-4 p-3 p-md-5 client-logo-container">
                         <img class="client-logo" src="images/client-logos/ja-client-att.svg" alt="AT&T">
                     </div>
                     <div class="col-6 col-md-4 p-3 p-md-5 client-logo-container">
                         <img class="client-logo" src="/images/client-logos/ja-client-cof.svg" alt="Capital One">
                     </div>
-                    <!-- <div class="col-6 col-md-4 p-3 p-md-5 client-logo-container">
-                        <img class="client-logo" src="/images/client-logos/ja-client-cheet.svg" alt="Cheetos">
-                    </div> -->
                     <div class="col-6 col-md-4 p-3 p-md-5 client-logo-container">
                         <img class="px-0 px-xl-5 client-logo" src="images/client-logos/ja-client-dan.svg" alt="Dannon">
                     </div>
-                    <!-- <div class="col-6 col-md-4 p-3 p-md-5 client-logo-container">
-                        <img class="client-logo" src="/images/client-logos/ja-client-dor.svg" alt="Doritos">
-                    </div> -->
                     <div class="col-6 col-md-4 p-3 p-md-5 client-logo-container">
                         <img class="client-logo" src="images/client-logos/ja-client-fl.svg" alt="Frito Lay">
                     </div> 
@@ -209,9 +203,6 @@ Fancy seeing you here! If you have any feedback on my code or suggestions on how
                     <div class="col-6 col-md-4 p-3 p-md-5 client-logo-container">
                         <img class="client-logo" src="/images/client-logos/ja-client-sf.svg" alt="State Farm">
                     </div>
-                    <!-- <div class="col-6 col-md-4 p-3 p-md-5 client-logo-container">
-                        <img class="px-0 px-xl-3 client-logo" src="/images/client-logos/ja-client-wm.svg" alt="Walmart">
-                    </div> -->
                 </div>
             </div>
         </section>
