--- a/index.html
+++ b/index.html
@@ -208,29 +208,26 @@ Fancy seeing you here! If you have any feedback on my code or suggestions on how
         </section>
         <div class="hr fade-in"></div>
         <section class="fade-in">
-            <h2 class="font-display text-center mb-3 subtitle">Contact Jonny</h2>
+            <h2 class="font-display text-center mb-3 subtitle">Contact Me</h2>
             <div class="container-fluid">
                 <div class="row d-flex justify-content-between">
                     <div class="col-12 col-md-6 mb-3 px-md-5">
                         <p class="contact-info col-12 col-md-11 mb-3 bio">
-                            I believe that creativity has the power to solve any problem, big or small. I also believe
-                            that we should focus much more energy on things that are fun and fulfilling. Fun-filling, if
-                            you will.
+                            I believe in the magic of creativity to solve problems, big or small.
+                        </p>  
+                        <p class="contact-info col-12 col-md-11 mb-3 bio">
+                            I also believe there's never an excuse to not have fun.
+                        </p>
+                        <p class="contact-info col-12 col-md-11 mb-3 bio">
+                            If you're into humor, authenticity, and empathy like I am, let's connect!
                         </p>
                         <p class="contact-info col-md-11 mb-3 bio">
-                            Those who know me know that I value humor, authenticity, and empathy above
-                            all else.
-                        </p>
-                        <p class="contact-info col-md-11 mb-3 bio">
-                            If you share these values and feel I could be of service to you or your organization, I
-                            would
-                            love to hear from you. Please
-                            get in touch using my contact form or reach out to me on
+                            Hit me up on
                             <a href="https://www.linkedin.com/in/jonnyabowd/" class="contact-text-link" target="_blank"
-                                rel="noopener noreferrer">LinkedIn</a>.
+                                rel="noopener noreferrer">LinkedIn</a> or my contact form.
                         </p>
                         <p class="contact-info col-md-11">
-                            Thank you in advance,
+                            Thanks in advance,
                         </p>
                         <div class="col-12">
                             <img class="col-6 col-md-6 col-lg-4 px-4" src="/images/ja-sig.svg" alt="Jonny">
