--- a/index.html
+++ b/index.html
@@ -65,17 +65,18 @@ Fancy seeing you here! If you have any feedback on my code or suggestions on how
         <!-- <div class="hr"></div> -->
         <div class="body fade-in">
             <p class="bio">
-                I'm a creative problem solver with                 
+                I'm a creative problem solver with
                 <span>
-                    <script>document.write( 
-                        new Date().getFullYear() - 2007 + "+"
+                    <script>document.write(
+                            new Date().getFullYear() - 2007
                         );
                     </script>
                 </span>
                 years of experience. I lead teams, love challenges, and have a relentlessly positive
                 attitude.
                 <br><br>
-                Got questions? <a href="#contact" class="contact-text-link">Contact me</a> anytime!
+                Got questions or fancy a conversation? <a href="#contact" class="contact-text-link">Contact me</a>
+                anytime!
             </p>
             <div class="contact">
                 <div class="links">
@@ -95,8 +96,8 @@ Fancy seeing you here! If you have any feedback on my code or suggestions on how
 
                     </a>
                 </div>
-                <p class="font-display copyright">© Jonny Abowd 
-                    <script>document.write( new Date().getFullYear() );</script>
+                <p class="font-display copyright">© Jonny Abowd
+                    <script>document.write(new Date().getFullYear());</script>
                 </p>
             </div>
         </div>
@@ -196,7 +197,7 @@ Fancy seeing you here! If you have any feedback on my code or suggestions on how
                     </div>
                     <div class="col-6 col-md-4 p-3 p-md-5 client-logo-container">
                         <img class="client-logo" src="images/client-logos/ja-client-fl.svg" alt="Frito Lay">
-                    </div> 
+                    </div>
                     <div class="col-6 col-md-4 p-3 p-md-5 client-logo-container">
                         <img class="client-logo" src="images/client-logos/ja-client-goog.svg" alt="Google">
                     </div>
@@ -213,15 +214,11 @@ Fancy seeing you here! If you have any feedback on my code or suggestions on how
                 <div class="row d-flex justify-content-between">
                     <div class="col-12 col-md-6 mb-3 px-md-5">
                         <p class="contact-info col-12 col-md-11 mb-3 bio">
-                            I believe in the magic of creativity to solve problems, big or small.
-                        </p>  
-                        <p class="contact-info col-12 col-md-11 mb-3 bio">
-                            I also believe there's never an excuse to not have fun.
+                            I believe creativity can solve problems both big and small.
+                            I also believe as a creative professional, there's never an excuse to not have fun.
                         </p>
                         <p class="contact-info col-12 col-md-11 mb-3 bio">
                             If you're into humor, authenticity, and empathy like I am, let's connect!
-                        </p>
-                        <p class="contact-info col-md-11 mb-3 bio">
                             Hit me up on
                             <a href="https://www.linkedin.com/in/jonnyabowd/" class="contact-text-link" target="_blank"
                                 rel="noopener noreferrer">LinkedIn</a> or my contact form.
@@ -281,7 +278,7 @@ Fancy seeing you here! If you have any feedback on my code or suggestions on how
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">
-    </script>
+        </script>
 </body>
 
 </html>
